// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Controls /> Snapshots should match Closed/Locked snapshot 1`] = `
<div
  className="controls panel"
>
  <button
    className="toggle-btn"
    disabled={false}
    onClick={[Function]}
  >
    Unlock Gate
  </button>
  <button
    className="toggle-btn"
    disabled={true}
    onClick={[Function]}
  >
    Open Gate
  </button>
</div>
`;

exports[`<Controls /> Snapshots should match Closed/Unlocked snapshot 1`] = `
<div
  className="controls panel"
>
  <button
    className="toggle-btn"
    disabled={false}
    onClick={[Function]}
  >
    Lock Gate
  </button>
  <button
    className="toggle-btn"
    disabled={false}
    onClick={[Function]}
  >
    Open Gate
  </button>
</div>
`;

exports[`<Controls /> Snapshots should match Open/Locked snapshot 1`] = `
<div
  className="controls panel"
>
  <button
    className="toggle-btn"
    disabled={true}
    onClick={[Function]}
  >
    Unlock Gate
  </button>
  <button
    className="toggle-btn"
    disabled={true}
    onClick={[Function]}
  >
    Close Gate
  </button>
</div>
`;

exports[`<Controls /> Snapshots should match Open/Unlocked snapshot 1`] = `
<div
  className="controls panel"
>
  <button
    className="toggle-btn"
    disabled={true}
    onClick={[Function]}
  >
    Lock Gate
  </button>
  <button
    className="toggle-btn"
    disabled={false}
    onClick={[Function]}
  >
    Close Gate
  </button>
</div>
`;
